tooling/nargo_cli/tests/snapshots/execution_failure/dyn_index_fail_nested_array/execute__tests__acir_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: unvalidated entry point input `x`
  ┌─ src/main.nr:6:9
  │
6 │ fn main(mut x: [Foo; 3], y: pub u32) {
  │         ----- `[Foo; 3]` does not implement `Validate`
  │
  = Implement or derive `Validate` for this type so its representation invariants are checked when it enters the circuit from an untrusted source, or silence this warning.

error: Index out of bounds, array has size 6, but index was 8
  ┌─ src/main.nr:7:12
  │
7 │     assert(x[y + 2].a == 5);
  │            --------
  │
  = Call stack:
    1: main
            at src/main.nr:7:12

Failed to solve program: 'Index out of bounds, array has size 6, but index was 8'
