tooling/nargo_cli/tests/snapshots/execution_failure/dyn_index_fail_nested_array/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: variable does not need to be mutable
  ┌─ src/main.nr:6:13
  │
6 │ fn main(mut x: [Foo; 3], y: pub u32) {
  │             -
  │

error: Index out of bounds: 4 is out of bounds for the array of length 3
  ┌─ src/main.nr:7:12
  │
7 │     assert(x[y + 2].a == 5);
  │            --------
  │

Error interpreting main function
