tooling/nargo_cli/tests/snapshots/execution_failure/dyn_index_fail_nested_array/execute__tests__force_brillig_false_inliner_0_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: Indexing an array or slice with a type other than `u32` is deprecated and will soon be an error
  ┌─ src/main.nr:7:14
  │
7 │     assert(x[y + 2].a == 5);
  │              -----
  │

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:7:14
  │
7 │     assert(x[y + 2].a == 5);
  │              -----
  │
  = Call stack:
    1. src/main.nr:7:14

Failed assertion
